１オーダー内に同一商品を複数追加できるよう、コピー機能を可能 バックグラウンドモードをONに変更（リモート通知）

--- a/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
+++ b/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
@@ -4733,8 +4733,8 @@
     <inferredMetricsTieBreakers>
         <segue reference="83A-RB-2vm"/>
         <segue reference="trP-t4-TT0"/>
-        <segue reference="TeE-x5-cdU"/>
         <segue reference="5C0-zU-5jG"/>
         <segue reference="F7V-xI-ljY"/>
+        <segue reference="dSr-Vk-QH8"/>
     </inferredMetricsTieBreakers>
 </document>
